[gd_scene load_steps=27 format=2]

[ext_resource path="res://sprite-action-black.png" type="Texture" id=1]
[ext_resource path="res://Interface/Ships/Groups/ShipStatus_Group.tscn" type="PackedScene" id=2]
[ext_resource path="res://Font/Small.tres" type="DynamicFont" id=3]
[ext_resource path="res://Font/SmallBold.tres" type="DynamicFont" id=4]
[ext_resource path="res://Interface/Ships/Groups/GroupPanelScript.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 0.666667 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.32549, 0.32549, 0.333333, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.74902, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxLine" id=4]
color = Color( 0.0784314, 0.0784314, 0.0862745, 1 )
thickness = 5

[sub_resource type="Theme" id=5]
HScrollBar/styles/grabber = SubResource( 31 )
HScrollBar/styles/grabber_highlight = SubResource( 2 )
HScrollBar/styles/grabber_pressed = SubResource( 3 )
HScrollBar/styles/scroll = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.156863, 0.156863, 0.168627, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StreamTexture" id=38]

[sub_resource type="StyleBoxFlat" id=39]
content_margin_left = 15.0
bg_color = Color( 0.12549, 0.12549, 0.133333, 1 )
border_width_right = 16
border_color = Color( 0.12549, 0.12549, 0.133333, 1 )

[sub_resource type="StreamTexture" id=40]

[sub_resource type="StreamTexture" id=41]

[sub_resource type="StreamTexture" id=42]

[sub_resource type="StreamTexture" id=43]

[sub_resource type="StreamTexture" id=44]

[sub_resource type="StyleBoxFlat" id=45]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.12549, 0.12549, 0.133333, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="Theme" id=32]
default_font = ExtResource( 4 )
OptionButton/colors/font_color = Color( 0.917647, 0.917647, 0.917647, 1 )
OptionButton/colors/font_color_hover = Color( 0.25098, 0.709804, 0.678431, 1 )
OptionButton/icons/arrow = SubResource( 38 )
OptionButton/styles/focus = null
OptionButton/styles/hover = SubResource( 39 )
OptionButton/styles/normal = SubResource( 39 )
OptionButton/styles/pressed = SubResource( 39 )
PopupMenu/colors/font_color = Color( 0.917647, 0.917647, 0.917647, 1 )
PopupMenu/icons/checked = SubResource( 40 )
PopupMenu/icons/radio_checked = SubResource( 41 )
PopupMenu/icons/radio_unchecked = SubResource( 42 )
PopupMenu/icons/submenu = SubResource( 43 )
PopupMenu/icons/unchecked = SubResource( 44 )
PopupMenu/styles/panel = SubResource( 45 )

[sub_resource type="StyleBoxFlat" id=33]
bg_color = Color( 0.0784314, 0.0784314, 0.0862745, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=34]
bg_color = Color( 0.25098, 0.709804, 0.678431, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=35]

[sub_resource type="StyleBoxFlat" id=36]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 225, 34, 30, 30 )

[node name="GroupPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -880.0
margin_bottom = -510.0
rect_min_size = Vector2( 400, 90 )
script = ExtResource( 5 )

[node name="BG" type="Panel" parent="."]
margin_right = 400.0
margin_bottom = 40.0
rect_min_size = Vector2( 400, 85 )
custom_styles/panel = SubResource( 11 )

[node name="VBoxContainer" type="VBoxContainer" parent="BG"]
rect_min_size = Vector2( 400, 85 )
alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="BG/VBoxContainer"]
margin_left = 12.0
margin_top = 11.0
margin_right = 387.0
margin_bottom = 61.0
rect_min_size = Vector2( 375, 50 )
size_flags_horizontal = 4
theme = SubResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="BG/VBoxContainer/ScrollContainer"]
margin_right = 1220.0
margin_bottom = 30.0

[node name="ShipStatus_Group" parent="BG/VBoxContainer/ScrollContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 200.0
margin_bottom = 30.0

[node name="ShipStatus_Group2" parent="BG/VBoxContainer/ScrollContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 204.0
margin_right = 404.0
margin_bottom = 30.0

[node name="ShipStatus_Group3" parent="BG/VBoxContainer/ScrollContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 408.0
margin_right = 608.0
margin_bottom = 30.0

[node name="ShipStatus_Group4" parent="BG/VBoxContainer/ScrollContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 612.0
margin_right = 812.0
margin_bottom = 30.0

[node name="ShipStatus_Group5" parent="BG/VBoxContainer/ScrollContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 816.0
margin_right = 1016.0
margin_bottom = 30.0

[node name="ShipStatus_Group6" parent="BG/VBoxContainer/ScrollContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1020.0
margin_right = 1220.0
margin_bottom = 30.0

[node name="bTAB" type="Panel" parent="BG/VBoxContainer"]
margin_top = 65.0
margin_right = 400.0
margin_bottom = 85.0
rect_min_size = Vector2( 400, 20 )
custom_styles/panel = SubResource( 12 )

[node name="HBoxContainer" type="HBoxContainer" parent="BG/VBoxContainer/bTAB"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -390.0
margin_top = -10.0
margin_bottom = 10.0
rect_min_size = Vector2( 390, 0 )
size_flags_horizontal = 4
alignment = 2

[node name="GroupName" type="RichTextLabel" parent="BG/VBoxContainer/bTAB/HBoxContainer"]
margin_left = 17.0
margin_top = 6.0
margin_right = 212.0
margin_bottom = 14.0
rect_min_size = Vector2( 195, 8 )
size_flags_vertical = 4
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[b]GROUP 1"
text = "GROUP 1"
scroll_active = false

[node name="OptionButton" type="OptionButton" parent="BG/VBoxContainer/bTAB/HBoxContainer"]
margin_left = 216.0
margin_right = 366.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 20 )
size_flags_vertical = 4
theme = SubResource( 32 )
align = 1
icon_align = 2
expand_icon = true

[node name="Button" type="Button" parent="BG/VBoxContainer/bTAB/HBoxContainer"]
margin_left = 370.0
margin_right = 390.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
rect_pivot_offset = Vector2( -20, 0 )
size_flags_horizontal = 8
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 33 )
custom_styles/pressed = SubResource( 34 )
custom_styles/focus = SubResource( 35 )
custom_styles/normal = SubResource( 36 )
icon = SubResource( 37 )
align = 2
icon_align = 2
expand_icon = true

[connection signal="pressed" from="BG/VBoxContainer/bTAB/HBoxContainer/Button" to="." method="_on_Button_pressed"]
